[package]
name = "hot-reload"
version = "0.1.0"
authors = ["Manmeet Maan <manmeetmann2003@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
druid-widget-nursery = { path = "../..", features = ["hot-reload"] }

[dependencies.druid]
git = "https://github.com/atlanticaccent/druid"
rev = "5223a253c32eff87f41b9c25c87abcf8e8004481" # update this when upgrading to newer druid
# path = "../../projects/druid/druid"
features = ["im"]
